2009-06-04  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c: Regression fix: it seems since ~W13 we have
	not been updating areas of the screen except for dialogs and full-
	screen windows.

2009-06-03  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#120044 Top-most application banners are blocked
	with DND flag set
	
	* src/mb/hd-comp-mgr.c: Apps can always show banners if they're
	topmost, even if they have do-not-disturb set.  Also, atoms are
	atoms, not booleans.

2009-06-03  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Use the new HDRM_STATE_LOADING for waking up hibernated apps.
	Fixes: NB#118215

	* src/home/hd-render-manager.c: Keep track of the loading screen parent,
	if present, to return it there later.
	* src/home/hd-switcher.c:
	* src/launcher/hd-launcher.c:

2009-06-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-render-manager.c (hd_render_manager_set_state): Return
	the g_debug print about state change back. When restarting damage
	tracking, do it from top to down.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): Switch to composited
	mode if application, Status Menu, or a dialog appears in non-composited
	mode.
	(hd_comp_mgr_unmap_notify): Switch back to non-composited mode if the
	next window in the stack is non-composited.
	* tests/test-speed.c: Make the window fullscreen in non-composited
	mode.

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view-container.c (backgrounds_dir_changed):
	* src/home/hd-home-view.c (CACHED_BACKGROUND_IMAGE_FILE_PNG,
	  CACHED_BACKGROUND_IMAGE_FILE_PVR, load_background_idle): Add support
	  for background-[1..4].png cached files.

2009-06-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/launcher/hd-launcher-tile.c (hd_launcher_tile_set_icon_name):
	Free old priv->icon_glow before setting the new one.

2009-06-03  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/Makefile.am