@@ -7,7 +7,7 @@
 # brightness = brightness of the background (0 = black, 1 = normal)          
 
 [blur]
-duration = 200
+duration = 250
 
 # Zoom out of the task navigator before it fades out
 [task_nav]
@@ -30,15 +30,15 @@ brightness = 0.75
 
 # Launcher top layer first appearing
 [launcher_in]
-duration = 300
+duration = 600
 
 # Launcher top layer disappearing
 [launcher_out]
-duration = 200
+duration = 250
 
 # launcher top layer disappearing when a layer in front
 [launcher_out_back]
-duration = 200
+duration = 250
 
 # launch animation
 [launcher_launch]
@@ -46,19 +46,19 @@ duration = 400
 
 # sub-menu appearing
 [launcher_in_sub]
-duration = 200
+duration = 250
 
 # sub-menu disappearing
 [launcher_out_sub]
-duration = 200
+duration = 250
 
 # main disappearing when sub-menu appears
 [launcher_back]
-duration = 200
+duration = 250
 
 # main appearing when sub-menu disappears
 [launcher_forward]
-duration = 200 
+duration = 250
 
 # Screen rotation transition
 # duration_in = time for rotation before blanking
@@ -80,8 +80,8 @@ duration = 300
 
 # Popup for dialogs and status menu
 [popup]
-duration_in = 250
-duration_out = 250
+duration_in = 300
+duration_out = 300
 
 # Fade in for banners
 [fade]
